search icon on mobile fixed

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -245,6 +245,7 @@
 		z-index: 99;
 
 		@media (max-width: 768px) {
+			display: none;
 		}
 
 		svg {
